--- a/iOS Exam/Views/Base.lproj/LaunchScreen.storyboard
+++ b/iOS Exam/Views/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,28 +14,20 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LaunchScrren XD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N0O-NK-xqq">
-                                <rect key="frame" x="140.5" y="438" width="133.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="R0F-7C-2gV">
-                                <rect key="frame" x="197" y="604" width="20" height="20"/>
-                            </activityIndicatorView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yof-zE-sfa">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R0F-7C-2gV" secondAttribute="bottom" constant="238" id="10n-dY-W4i"/>
-                            <constraint firstItem="N0O-NK-xqq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8ub-Kf-iqc"/>
-                            <constraint firstItem="N0O-NK-xqq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="SJ8-tQ-HBG"/>
-                            <constraint firstItem="R0F-7C-2gV" firstAttribute="top" secondItem="N0O-NK-xqq" secondAttribute="bottom" constant="145.5" id="Tnh-1D-nXX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R0F-7C-2gV" secondAttribute="trailing" constant="197" id="UR3-M7-Mza"/>
-                            <constraint firstItem="R0F-7C-2gV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="197" id="qTg-Dx-orf"/>
+                            <constraint firstItem="Yof-zE-sfa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="CRc-op-E4e"/>
+                            <constraint firstAttribute="trailing" secondItem="Yof-zE-sfa" secondAttribute="trailing" id="D49-N1-aQO"/>
+                            <constraint firstAttribute="bottom" secondItem="Yof-zE-sfa" secondAttribute="bottom" id="PEs-lw-LC8"/>
+                            <constraint firstItem="Yof-zE-sfa" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="VmT-7G-C1i"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -44,6 +37,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Launch" width="428" height="926"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
